# graphics-and-shaders-22

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Main.cpp  README.md  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  task2.cpp  task3.cpp
cmake/modules/: FindASSIMP.cmake  FindGLFW3.cmake
configuration/: root_directory.h.in
includes/: Config.h
includes/gui/: GUI.h  Widgets.h
includes/object/: Actor.h  Mesh.h  Model.h  Transform.h
includes/rendering/: Camera.h  Renderer.h  Shader.h  Texture.h
lib/: glfw.lib
resources/models/backpack/: backpack.mtl
resources/models/icosphere/: icosphere.mtl
resources/models/plane/: plane.mtl
resources/models/sphere/: sphere.mtl
resources/models/teapot/: teapot.mtl
shaders/: defaultShader.fs  defaultShader.vs  newShader.fs  shaderFBO.fs  shaderFBO.vs  textureShader.fs  textureShader.vs
shaders/2dshaders/: 2dShader.fs  2dShader.vs  colorShader.fs  defaultShader.vs  newColorShader.fs  newVertexShader.vs  shaderToy.fs  shaderToy.vs  textureShader.fs
shaders/3dshaders/: 3dShader.vs  colorShader.fs  colorShader.vs  lighting.fs  lighting.vs  lightingColor.fs  lightingModel.fs  lightingTexture.fs  lighting_model.fs  lighting_texture.fs  textureShader.fs
src/: Main.cpp  ShaderToy.cpp  ShaderViewer.cpp
src/gui/: GUI.cpp  Widgets.cpp
src/object/: Actor.cpp  Mesh.cpp  Model.cpp  Transform.cpp
src/rendering/: Camera.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
